# docker-image-test

./: README.md  docker-compose.yaml
go-image/: Dockerfile  go.mod  main.go
node-image/: Dockerfile  index.js  package.json
rust-image/: Cargo.toml  Dockerfile  README.md
rust-image/src/: main.rs
springboot-image/: .gitignore  Dockerfile  docker-compose.yaml  pom.xml
springboot-image/src/main/java/com/example/demo/controller/: TestController.java
